Correcting layout issues
Updated html and json to address formatting discrepancies between sandbox and live

--- a/The Troubleshooters/TheTroubleshooters.css
+++ b/The Troubleshooters/TheTroubleshooters.css
@@ -35,7 +35,7 @@ img.sheet-shield {
 }
 
 img.sheet-logo {
-	align: right
+	align: right;
 }
 
 label.sheet-gearcheck {
